--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -24,16 +24,17 @@ jobs:
 
       - name: Build with dotnet
         run: 
+          cd ./API-LocateContractor
           dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./API-LocateContractor
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/API-LocateContractor
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ./API-LocateContractor
+          path: ${{env.DOTNET_ROOT}}/API-LocateContractor
 
   deploy:
     runs-on: windows-latest
