--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ./API-LocateContractor/build
+          path: ./API-LocateContractor
 
   deploy:
     runs-on: windows-latest
