--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -41,8 +41,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+      url: https://yellow-sea-0fa5a340f.1.azurestaticapps.net/
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
