--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -43,7 +43,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: https://yellow-sea-0fa5a340f.1.azurestaticapps.net/
+      url: "https://yellow-sea-0fa5a340f.1.azurestaticapps.net/"
 
     steps:
       - name: Download artifact from build job
