--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -45,7 +45,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: https://yellow-sea-0fa5a340f.1.azurestaticapps.net
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
