--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -25,7 +25,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Developement
         working-directory: ./API-LocateContractor
 
 
