--- a/.github/workflows/main_locatecontractorapi.yml
+++ b/.github/workflows/main_locatecontractorapi.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: dotnet publish
         run: 
-          dotnet publish -c Developement -o ${{env.DOTNET_ROOT}}/myapp
+          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
         working-directory: ./API-LocateContractor
 
       - name: Upload artifact for deployment job
