--- a/react-locate-contractor/package.json
+++ b/react-locate-contractor/package.json
@@ -2,7 +2,8 @@
   "name": "react-locate-contractor",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": ">=16.0.0"
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@okta/okta-auth-js": "6.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25"
   }
 }
