--- a/react-locate-contractor/package.json
+++ b/react-locate-contractor/package.json
@@ -6,8 +6,9 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@okta/okta-auth-js": "6.0",
-    "@okta/okta-react": "6.4",
+    "@okta/okta-auth-js": "^6.7.2",
+    "@okta/okta-react": "^6.5.0",
+    "@okta/okta-signin-widget": "^6.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,12 +16,15 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
+    "use-async-effect": "^2.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
