--- a/react-locate-contractor/package.json
+++ b/react-locate-contractor/package.json
@@ -6,6 +6,11 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "@okta/okta-auth-js": "^6.7.2",
     "@okta/okta-react": "^6.5.0",
     "@okta/okta-signin-widget": "^6.5.0",
