--- a/react-locate-contractor/package.json
+++ b/react-locate-contractor/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "axios": "^0.27.2",
+    "material-ui-confirm": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
