--- a/react-locate-contractor/package.json
+++ b/react-locate-contractor/package.json
@@ -6,11 +6,13 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.15.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@okta/okta-auth-js": "^6.7.2",
     "@okta/okta-react": "^6.5.0",
     "@okta/okta-signin-widget": "^6.6.1",
@@ -20,7 +22,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "material-ui-confirm": "^3.0.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
